[package]
name = "k8s-resource-graph-explorer-db"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cozo = { version = "0.7.6", features = ["storage-sqlite", "graph-algo"] }
smartstring = { version = "1.0.1", features = ["serde"] }
axum = "0.7.4"
serde_json = "1.0.114"
serde = "1.0.197"
thiserror = "1.0.57"
